packages/core/src/components/molecules/content-slider/content-slider.component.scss
:host {
    @apply flex flex-col overflow-hidden;

    @apply p-16 -m-16;

    .slider {
        @apply overflow-visible relative box-content;

        &.draggable {
            @apply cursor-grab desktop-xs:cursor-auto;

            &.dragging {
                @apply cursor-grabbing desktop-xs:cursor-auto;

                .inner-slider {
                    @apply transition-none;
                }
            }
        }

        .inner-slider {
            @apply absolute flex flex-nowrap items-stretch w-full gap-2;

            @apply tablet:gap-4 desktop-xs:flex-wrap;

            @apply transition-all;
            transition-duration: 0.5s;

            > ::slotted(*) {
                @apply w-full tablet:w-[45%] desktop-xs:w-0;
                @apply flex-shrink-0 desktop-xs:flex-1;
                position: relative;
                z-index: 10;
            }
        }
    }

    .indicator {
        @apply flex justify-center items-center desktop-xs:hidden;

        .item {
            @apply my-3 py-1 px-1;
        }
    }
}

